@@ -2,7 +2,7 @@
  *
  * Copyright 1999,2000,2001 BrightStation PLC
  * Copyright 2002 Ananova Ltd
- * Copyright 2003,2004,2006,2007,2008,2009 Olly Betts
+ * Copyright 2003,2004,2006,2007,2008,2009,2011 Olly Betts
  * Copyright 2009 Lemur Consulting Ltd
  *
  * This program is free software; you can redistribute it and/or
@@ -300,7 +300,7 @@ Xapian::Document::Internal::set_data(const string &data_)
 TermList *
 Xapian::Document::Internal::open_term_list() const
 {
-    LOGCALL(MATCH, TermList *, "Document::Internal::open_term_list", NO_ARGS);
+    LOGCALL(DB, TermList *, "Document::Internal::open_term_list", NO_ARGS);
     if (terms_here) {
 	RETURN(new MapTermList(terms.begin(), terms.end()));
     }
@@ -448,10 +448,10 @@ Xapian::Document::Internal::need_terms() const
 Xapian::valueno
 Xapian::Document::Internal::values_count() const
 {
-    LOGLINE(DB, "Xapian::Document::Internal::values_count() called");
+    LOGCALL(DB, Xapian::valueno, "Document::Internal::values_count", NO_ARGS);
     need_values();
     Assert(values_here);
-    return values.size();
+    RETURN(values.size());
 }
 
 string
